# clauditor

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  install.md  install.sh
.github/workflows/: ci.yml  release.yml
cc-blackbox-cli/: Cargo.toml
cc-blackbox-cli/src/: decision.rs  main.rs  tmux.rs
cc-blackbox-cli/tests/: cli_smoke.rs
cc-blackbox-core/: Cargo.toml  Dockerfile  build.rs
cc-blackbox-core/proto/envoy/config/core/v3/: base.proto
cc-blackbox-core/proto/envoy/extensions/filters/http/ext_proc/v3/: processing_mode.proto
cc-blackbox-core/proto/envoy/service/ext_proc/v3/: external_processor.proto
cc-blackbox-core/proto/envoy/type/v3/: http_status.proto
cc-blackbox-core/src/: correlation.rs  diagnosis.rs  guard.rs  jsonl.rs  main.rs  metrics.rs  pricing.rs  watch.rs
cc-blackbox-core/tests/: http_smoke.rs
clauditor-cli/: Cargo.toml
clauditor-cli/src/: main.rs  tmux.rs
clauditor-cli/tests/: cli_smoke.rs
clauditor-core/: Cargo.toml  Dockerfile
clauditor-core/src/: diagnosis.rs  main.rs  metrics.rs  pricing.rs  watch.rs
clauditor-core/tests/: http_smoke.rs
docs/: README.md  prd-session-finalization-and-guard-metrics.md
docs/internal/: prd-claude-footer-postmortem-drilldown.md  prd-claude-footer-stop-plan.md
docs/reference/: advanced.md  developing.md
envoy/: envoy.yaml
grafana/dashboards/: cc-blackbox.json  (+1 more)
prometheus/: prometheus.yml
scripts/: render-homebrew-formula.sh
test/: docker-compose.e2e.yml  e2e.sh  envoy.e2e.yaml  fake-anthropic.py  parallel-sessions.sh
(+6 files in other folders)
