[package]
name = "clauditor-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clauditor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
futures-util = "0.3"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
